Fix client build failure

XMLWordPrintable

    • b20
    • generic
    • generic

      Client build failed.

      /home/ent-user/ci-scripts/jdk_src/src/hotspot/share/compiler/compileBroker.cpp:613:81: error: 'PHASE_NUM_TYPES' was not declared in this scope
      21:52:15 GrowableArray<const char*>* c2_phase_names = new GrowableArray<const char*>(PHASE_NUM_TYPES);
      21:52:15 ^~~~~~~~~~~~~~~
      21:52:15 /home/ent-user/ci-scripts/jdk_src/src/hotspot/share/compiler/compileBroker.cpp:615:30: error: 'CompilerPhaseTypeHelper' has not been declared
      21:52:15 c2_phase_names->append(CompilerPhaseTypeHelper::to_string((CompilerPhaseType)i));
      21:52:15 ^~~~~~~~~~~~~~~~~~~~~~~
      21:52:15 /home/ent-user/ci-scripts/jdk_src/src/hotspot/share/compiler/compileBroker.cpp:615:66: error: 'CompilerPhaseType' was not declared in this scope
      21:52:15 c2_phase_names->append(CompilerPhaseTypeHelper::to_string((CompilerPhaseType)i));
      21:52:15 ^~~~~~~~~~~~~~~~~
      21:52:15 /home/ent-user/ci-scripts/jdk_src/src/hotspot/share/compiler/compileBroker.cpp:615:66: note: suggested alternative: 'CompilerType'
      21:52:15 c2_phase_names->append(CompilerPhaseTypeHelper::to_string((CompilerPhaseType)i));
      21:52:15 ^~~~~~~~~~~~~~~~~
      21:52:15 CompilerType

            Assignee:
            Yang Zhang
            Reporter:
            Yang Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: