8242796: Fix client build failure

Reviewed-by: kvn